--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <title>Przepisy kulinarne - Sprawdzone i smaczne - Smaczny.pl</title>
 <meta charset="UTF-8">
+
+<meta name="facebook-domain-verification" content="mustg1q87zab58tfq58sj86fkjxb25" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Przepisy kulinarne - każdy wypróbowany i opatrzony zdjęciami. Na stronie także artykuły kulinarne, forum, przelicznik wag. Smaczna kuchnia w Twoim domu. Zapraszamy.">
 <meta name="keywords" content="przepis, przepisy kulinarne, kuchnia, ciasta, sałatki, alkohole, forum kulinarne, ciasto, placek, krem, smaczne, przetwory, dania, kulinaria">
