--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
 <meta charset="UTF-8">
 
 <meta name="facebook-domain-verification" content="mustg1q87zab58tfq58sj86fkjxb25" />
+
+<!-- Facebook Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1710442312678109');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1710442312678109&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Facebook Pixel Code -->
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Przepisy kulinarne - każdy wypróbowany i opatrzony zdjęciami. Na stronie także artykuły kulinarne, forum, przelicznik wag. Smaczna kuchnia w Twoim domu. Zapraszamy.">
 <meta name="keywords" content="przepis, przepisy kulinarne, kuchnia, ciasta, sałatki, alkohole, forum kulinarne, ciasto, placek, krem, smaczne, przetwory, dania, kulinaria">
